// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-organize-table-columns-modal Custom trigger button 1`] = `
<div
  class="m-modal m-organize-table-columns-modal"
>
  <button
    class="m-button m--is-skin-secondary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      test 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots modul-components|m-organize-table-columns-modal Default 1`] = `
<div
  class="m-modal m-organize-table-columns-modal"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Réorganiser les colonnes 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots modul-components|m-organize-table-columns-modal Fixed columns 1`] = `
<div
  class="m-modal m-organize-table-columns-modal"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Réorganiser les colonnes 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots modul-components|m-organize-table-columns-modal Hidden columns 1`] = `
<div
  class="m-modal m-organize-table-columns-modal"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Réorganiser les colonnes 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots modul-components|m-organize-table-columns-modal Ignore columns 1`] = `
<div
  class="m-modal m-organize-table-columns-modal"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Réorganiser les colonnes 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;
